# sortdx

./: .gitignore  DELIVERABLE.md  LICENSE  README.md  demo.py  dev_test.py  pyproject.toml  setup_dev.py  simulate_ci.sh  test_compatibility.py
.github/workflows/: ci.yml
sortdx/: __init__.py  __main__.py  cli.py  core.py  parsers.py  utils.py
sortx/: __init__.py  cli.py  core.py  parsers.py  utils.py
tests/: __init__.py  test_cli.py  test_core.py  test_integration.py  test_parsers.py  test_utils.py
tests/data/: sample.csv  sample.jsonl  sample.txt
